--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+debug=true
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.initialize=true
+spring.datasource.url=jdbc:h2:mem:testdb;
