--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.datasource.initialize=true
 spring.datasource.url=jdbc:h2:mem:testdb;
+server.error.include-stacktrace=never
