--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.h2.console.enabled=true
 spring.datasource.initialize=true
 spring.datasource.url=jdbc:h2:mem:testdb;
 server.error.include-stacktrace=never
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+info.greet=Good morning
+info.hello=Hello World
+info.tag.environment=dev
+spring.boot.admin.client.url=http://localhost:9080
+spring.boot.admin.client.instance.metadata.tags.environment=dev
